google search(jQuery)

--- a/static/js/content.html
+++ b/static/js/content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title id="title1">Title</title>
-  <script src="content1.js"></script>
+  <script src="usingjQuery1.js"></script>
 </head>
 <body>
 <h1>content searched:<span id="scontent"></span></h1>
