--- a/static/js/content.html
+++ b/static/js/content.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title id="title1">Title</title>
-  <script src="usingjQuery1.js"></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+     <script src="usingjQuery1.js"></script>
 </head>
 <body>
 <h1>content searched:<span id="scontent"></span></h1>
